--- a/Resources/public/scss/_miscplugins.scss
+++ b/Resources/public/scss/_miscplugins.scss
@@ -119,9 +119,11 @@ select {
 	padding: 0.75em 1em;
 }
 
-.select2-container .select2-choice,
-.select2-container .select2-choices,
-.select2-container .select2-choices .select2-search-field input {
+.form-inline.is-visible .select2-container .select2-choice,
+.form-inline.is-visible .select2-container .select2-choices,
+.form-inline.is-visible .select2-container .select2-choices .select2-search-field input,
+.select2-container-active .select2-choice,
+.select2-container-multi.select2-container-active .select2-choices {
 	border-color: #000;
 	box-shadow: none;
 }
@@ -131,10 +133,15 @@ select {
 	right: 7px;
 }
 
-.select2-container-active .select2-choice,
-.select2-container-multi.select2-container-active .select2-choices {
-	border-color: #000;
-	box-shadow: none;
+.select2-container.select2-container-disabled .select2-choice,
+.select2-container.select2-container-disabled .select2-choices {
+    cursor: not-allowed;
+    background-color: transparent;
+    border-color: transparent;
+    box-shadow: none;
+}
+.select2-container.select2-container-disabled .select2-choice .select2-arrow {
+	display: none;
 }
 
 .editable-click,
