--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -202,6 +202,10 @@ fieldset[disabled] .form-control + .input-group-addon {
 	display: none;
 }
 
+span.x-editable.editable.editable-click, .sonata-ba-list-field-boolean .label-danger {
+	margin: 0 -8px;
+}
+
 @media only screen and (min-width: 768px) {
 	.sonata-ba-form .sonata-ba-form-actions.well {
 		left: 230px;
