--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -14,11 +14,7 @@
             <nav class="navbar navbar-default {% if _tab_menu is not empty %} has_tabs {% endif %}" role="navigation">
                 <div class="container-fluid">
                     {% block tab_menu_navbar_header %}
-                        {% if _navbar_title is not empty %}
-                            <div class="navbar-header">
-                                <a class="navbar-brand" href="#">{{ _navbar_title|raw }}</a>
-                            </div>
-                        {% endif %}
+                        {{ parent() }}
                     {% endblock %}
 
                     <div class="navbar-collapse">
