Feature: extra tab styling, border on tabsholder.

--- a/Resources/public/scss/_miscplugins.scss
+++ b/Resources/public/scss/_miscplugins.scss
@@ -185,6 +185,11 @@ a.editable-click:hover {
 	color: #444!important;
 }
 
+.redactor-styles {
+	 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+	 font-size: 14px !important;
+}
+
 //magnific popup base
 
 /* Magnific Popup CSS */
