--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -84,33 +84,60 @@
 .btn-group {
     position: static;
 }
-
-.btn-group .delete_link {
+.btn-group .delete_link,
+.btn-group .delete_link:after,
+.btn-group .delete_link:before {
+    width: 59px;
+    // height: 58px;
     position: absolute;
-    right: -58px;
-    width: 58px;
-    top: 0;
+    left: -1px;
+    top: -1px;
     bottom: 0;
-    background: $danger;
-    border-color: $danger;
-    color: #fff !important;
-    padding: 15px 20px;
-    margin: 0;
-    display: none;
-    &:hover, &:active, &:focus{
-        background: darken($danger,5%);
+}
+.btn-group .delete_link:before {
+    content:'';
+    // width: 59px;
+    // height: 59px;
+    // position: absolute;
+    // left: -1px;
+    // top: -1px;
+    background-image: none;
+    background-color: $lighter-gray;
+    border-color: $lighter-gray;
+    transition: background-color 0.1s;
+    z-index: 1;
+}
+.btn-group .delete_link {
+    background-color: transparent;
+    border-color: transparent;
+    &:hover:after, &:active:after, &:focus:after{
+        background-color: darken($danger,5%);
         border-color: darken($danger,15%);
     }
-
-    i {
-        display: block;
-        font-size: 20px;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 0;
-        right: 0;
+}
+.btn-group .delete_link:after {
+    background-image: url('../images/icons/ic_close_white.svg');
+    background-repeat: no-repeat;
+    background-size: 16px;
+    background-position: center;
+    background-color: $danger;
+    border-color: $danger;
+    color: #fff !important;
+    content: '';
+    transition: transform 0.3s;
+}
+.sonata-ba-list tr:hover {
+    .delete_link:after {
+        transform: translateX(100%);
     }
+}
+.sonata-ba-list tr:nth-child(even) .btn-group .delete_link:before {
+    background-color: #fff;
+    border-color: #fff;
+}
+.sonata-ba-list tr:hover .btn-group .delete_link:before {
+    background-color: $gray;
+    border-color: $gray;
 }
 
 .btn-group.open .dropdown-toggle {
