Feature: file upload styling.

--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -66,6 +66,8 @@ textarea {
 	input {
 		min-height: 2.7857142857em;
 		padding: 0.75em 1em;
+		background-color: #fff;
+		border: 1px solid $gray;
 	}
 }
 
@@ -154,6 +156,10 @@ textarea {
 .vich-image {
 	position: relative;
 	a { display: block; }
+	.form-group {
+		padding: 0;
+		border: none;
+	}
 	.checkbox {
 		position: absolute;
 		top: 4.6rem;
@@ -161,7 +167,6 @@ textarea {
 		margin: 0;
 		font-size: 0;
 	}
-
 	.checkbox .icheckbox_square-blue {
 		background: url('../images/icons/ic_close_white.svg') $danger no-repeat center;
 		background-size: 18px;
@@ -172,7 +177,7 @@ textarea {
 		visibility: hidden;
 		opacity: 0;
 		pointer-events: none;
-		transition: 0.25s ease-in-out;
+		transition: 0.15s ease-in-out;
 		&.checked {
 			visibility: visible!important;
 			opacity: 1!important;
