--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -84,28 +84,13 @@
 .btn-group {
     position: static;
 }
-.btn-group .delete_link,
-.btn-group .delete_link:after,
-.btn-group .delete_link:before {
-    width: 59px;
-    // height: 58px;
+.btn-group .delete_link {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    left: -1px;
+    left: 100%;
     top: -1px;
-    bottom: 0;
-}
-.btn-group .delete_link:before {
-    content:'';
-    // width: 59px;
-    // height: 59px;
-    // position: absolute;
-    // left: -1px;
-    // top: -1px;
-    background-image: none;
-    background-color: $lighter-gray;
-    border-color: $lighter-gray;
-    transition: background-color 0.1s;
-    z-index: 1;
+    bottom: -1px;
 }
 .btn-group .delete_link {
     background-color: transparent;
@@ -115,7 +100,7 @@
         border-color: darken($danger,15%);
     }
 }
-.btn-group .delete_link:after {
+.btn-group .delete_link {
     background-image: url('../images/icons/ic_close_white.svg');
     background-repeat: no-repeat;
     background-size: 16px;
@@ -123,21 +108,16 @@
     background-color: $danger;
     border-color: $danger;
     color: #fff !important;
-    content: '';
-    transition: transform 0.3s;
+    display: none;
 }
 .sonata-ba-list tr:hover {
-    .delete_link:after {
-        transform: translateX(100%);
+    .delete_link {
+        display: block;
     }
 }
 .sonata-ba-list tr:nth-child(even) .btn-group .delete_link:before {
     background-color: #fff;
     border-color: #fff;
-}
-.sonata-ba-list tr:hover .btn-group .delete_link:before {
-    background-color: $gray;
-    border-color: $gray;
 }
 
 .btn-group.open .dropdown-toggle {
