Feature: reappearance of the filter list. And body classes for list and edit views.

--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -100,9 +100,9 @@ textarea {
 	}
 }
 
-.sonata-filter-form {
-	display: none !important;
-}
+// .sonata-filter-form {
+// 	display: none !important;
+// }
 
 .sonata-ba-list-field-text .edit_link {
 	display: none;
