--- a/Resources/views/CRUD/edit.html.twig
+++ b/Resources/views/CRUD/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends "SonataAdminBundle:CRUD:edit.html.twig" %}
 
+{% block body_attributes %}class="sonata-bc skin-black fixed just-records-edit"{% endblock %}
+
 {% block title %}
     {% if admin.id(object) is not null %}
         {{ admin.toString(object) }}
