--- a/Resources/views/CRUD/list.html.twig
+++ b/Resources/views/CRUD/list.html.twig
@@ -1,5 +1,7 @@
 {% extends "SonataAdminBundle:CRUD:list.html.twig" %}
 
+{% block body_attributes %}class="sonata-bc skin-black fixed just-records-list"{% endblock %}
+
 {% block title %}
 	{# TODO REFACTOR THIS CRAP #}
     {% if admin.isChild and admin.parent.subject %}
