Feature: Add new HTML because we always want to show the header title

--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -1,27 +1,57 @@
 {% extends 'SonataAdminBundle::standard_layout.html.twig' %}
 
-    {% block javascripts %}
-        {{ parent() }}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-    {% endblock javascripts %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+{% endblock javascripts %}
 
-    {% block body_attributes %}class="sonata-bc skin-black fixed"{% endblock %}
+{% block body_attributes %}class="sonata-bc skin-black fixed"{% endblock %}
 
-    {% block side_bar_after_nav %}{% endblock %}
+{% block side_bar_after_nav %}{% endblock %}
 
-    {% block sonata_admin_content_actions_wrappers %}
-        {% if _actions|replace({ '<li>': '', '</li>': '' })|trim is not empty %}
-            <ul class="nav navbar-nav navbar-right add_records">
-            {% if _actions|split('</a>')|length > 2 %}
-                <li class="dropdown sonata-actions">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ 'link_actions'|trans({}, 'SonataAdminBundle') }} <b class="caret"></b></a>
-                    <ul class="dropdown-menu" role="menu">
-                        {{ _actions|raw }}
-                    </ul>
-                </li>
-            {% else %}
-                {{ _actions|raw }}
+{% block sonata_page_content_nav %}
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+            {% block tab_menu_navbar_header %}{{ parent() }}{% endblock %}
+
+            {% if _tab_menu is not empty or _actions is not empty or _list_filters_actions is not empty %}
+                <div class="navbar-collapse">
+                    {% if _tab_menu is not empty %}
+                        <div class="navbar-left">
+                            {{ _tab_menu|raw }}
+                        </div>
+                    {% endif %}
+
+                    {% if admin is defined and action is defined and action == 'list' and admin.listModes|length > 1 %}
+                        <div class="nav navbar-right btn-group">
+                            {% for mode, settings in admin.listModes %}
+                                <a href="{{ admin.generateUrl('list', app.request.query.all|merge({_list_mode: mode})) }}" class="btn btn-default navbar-btn btn-sm{% if admin.getListMode() == mode %} active{% endif %}"><i class="{{ settings.class }}"></i></a>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+
+                    {% block sonata_admin_content_actions_wrappers %}
+                        {% if _actions|replace({ '<li>': '', '</li>': '' })|trim is not empty %}
+                            <ul class="nav navbar-nav navbar-right add_records">
+                                {% if _actions|split('</a>')|length > 2 %}
+                                    <li class="dropdown sonata-actions">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ 'link_actions'|trans({}, 'SonataAdminBundle') }} <b class="caret"></b></a>
+                                        <ul class="dropdown-menu" role="menu">
+                                            {{ _actions|raw }}
+                                        </ul>
+                                    </li>
+                                {% else %}
+                                    {{ _actions|raw }}
+                                {% endif %}
+                            </ul>
+                        {% endif %}
+                    {% endblock sonata_admin_content_actions_wrappers %}
+
+                    {% if _list_filters_actions is not empty %}
+                        {{ _list_filters_actions|raw }}
+                    {% endif %}
+                </div>
             {% endif %}
-            </ul>
-        {% endif %}
-    {% endblock sonata_admin_content_actions_wrappers %}
+        </div>
+    </nav>
+{% endblock sonata_page_content_nav %}
