Bugfix: Add a 100% width on the forms to fix a big styling issue for IE and Edge

--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -127,6 +127,7 @@ textarea {
     padding-bottom: 100vh;
     margin-bottom: -100vh;
     overflow: hidden;
+    width: 100%;
 	.sonata-ba-form-actions.well {
 		background-color: $gray;
 		border: none;
