Chore: Remove the min-height from checkboxes for better browser compatibility

--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -43,6 +43,9 @@
 input[type="file"] {
 	height: auto;
 }
+input[type="checkbox"] {
+	min-height: auto !important;
+}
 
 .sonata-filter-form .row > .col-sm-9, .sonata-filter-form .row  > .col-sm-3 {
 	width: 100%;
