--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -95,6 +95,9 @@
 .navbar {
 	border-radius: 0;
 }
+.nav.navbar-nav {
+	margin: 0 -10px;
+}
 
 .navbar.navbar-default {
 	background-color: #FFFFFF;
@@ -184,7 +187,7 @@
 }
 .navbar-default .navbar-nav>li>a {
 	color: $primary-color;
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: bold;
 }
 
