Bugfix: Redactor sticky toolbar + word-break issue

--- a/Resources/public/scss/_miscplugins.scss
+++ b/Resources/public/scss/_miscplugins.scss
@@ -1,3 +1,7 @@
+.toolbar-fixed-box {
+  top: 50px!important;
+}
+
 .ui-sortable-helper {
 	background-color: #bfbfbf !important;
 	// box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
