Chore: changes px to em

--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -221,7 +221,7 @@
 	}
 	.content-header .navbar-nav.navbar-right:last-child {
 		margin-top: 0.75em; margin-bottom: 0.75em;
-		margin-right: -9px;
+		margin-right: -0.5625em;
 	}
 }
 
