--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -224,7 +224,7 @@ textarea {
 	transition: 0.15s ease-in-out;
 }
 
-.vich-image {
+.vich-image, .cropper {
 	position: relative;
 	a { 
 		background-color: $light-gray;
