--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -121,3 +121,30 @@
 .btn-group.open .dropdown-toggle {
     box-shadow: none;
 }
+
+.btn-group-trigger {
+    
+    margin-right: 5px;
+}
+
+.sonata-ba-list .btn-group-dropdown {
+    display: none;
+    position: absolute;
+    top: 3.1rem;
+    z-index: 5;
+    
+    a {
+        font-weight: 500;
+        font-size: 1em;
+    }
+    .btn {
+        border: 0;
+    }
+    &.is_active {
+        display: block;
+    }
+}
+
+.sonata-ba-list .btn-group {
+
+}
