--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -219,14 +219,17 @@
 	.sidebar-toggle {
 		display: none;
 	}
-	.content-header .navbar-nav.navbar-right:last-child {
+	.content-header .navbar-nav.navbar-right {
 		margin-top: 0.75em; margin-bottom: 0.75em;
 		margin-right: -0.5625em;
+		.dropdown-toggle  {
+			margin-top: -0.25em;
+		}
 	}
 }
 
 @media screen and (min-width: 50em) {
-	.content-header .navbar-nav.navbar-right:last-child {
+	.content-header .navbar-nav.navbar-right{
 		margin-top: 3.75em;
 		margin-bottom: 3.75em;
 	}
