Feature: Add loading animation when deleting images for the page refresh

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -60,6 +60,13 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    * {
+        transition: opacity 0.5s;
+    }
+    .box.is_active * {
+        opacity: 0.5;
+        pointer-events: none;
+    }
 }
 
 .tab-pane .box {
