--- a/Resources/public/scss/sticky.scss
+++ b/Resources/public/scss/sticky.scss
@@ -1,3 +1,14 @@
-.js-sticky.is_sticky {
+.js-sticky {
+	transform: translateY(-200%);
+
 	position: fixed;
+	visibility: hidden;
+	top: -2px;
+	margin-top: 10px !important;
+	margin-left: 8px !important;
+}
+
+.add_records.is_sticky {
+	visibility: visible;
+	transform: translateY(100%);
 }
