--- a/Resources/public/scss/sticky.scss
+++ b/Resources/public/scss/sticky.scss
@@ -1,9 +1,9 @@
-.js-sticky {
+.add_records.is-clone {
 	transform: translateY(-200%);
 	visibility: hidden;
 }
 
-.add_records.is_sticky {
+.add_records.is-sticky {
 	position: fixed;
 	top: -2px;
 	margin-top: 10px !important;
