--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -28,6 +28,10 @@ body {
     padding-bottom: 5em;
 }
 
+.progress-description {
+    display: none;
+}
+
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
