Chore: multiple minor style changes, ie: makes sure that the info-box-text is the correct size, and the info-box-content has the correct background color

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -37,7 +37,7 @@
             padding: 0.75em 2.375em;
         }
         .box-title {
-            font-size: 24px; 
+            font-size: 24px;
         }
         .box-body {
             padding: 0 2.375em 0.75em;
@@ -93,7 +93,7 @@
 }
 
 .info-box-content {
-    background: $lighter-gray;
+    //background: $lighter-gray;
     margin-left: 0;
     padding: 1.2em 1.5em;
 }
