--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -124,9 +124,8 @@ body.fixed .content-header>.sticky-wrapper {
 }
 
 .info-box-text {
-    font-size: 24px;
     border-bottom: 1px solid transparent;
-    padding: 0 0 0.4em 0;
+    padding: 0;
     text-transform: inherit;
 }
 
