Chore: better code for the table checkbox fix

--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -115,9 +115,9 @@ td.sonata-ba-list-field.sonata-ba-list-field-integer {
 }
 
 .sonata-ba-list-field-header-batch, .sonata-ba-list-field-batch {
-    padding: 0.5em !important;
+    padding: 1.35em 0.5em !important;
     + .sonata-ba-list-field-header-text, + .sonata-ba-list-field-text {
-        padding: 0.3rem !important;
+        padding: 1.35em 0.3rem !important;
     }
 }
 
