--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -96,10 +96,6 @@
 	border-radius: 0;
 }
 
-.navbar-left {
-	clear:both;
-}
-
 .nav.navbar-nav {
 	margin: 0 -10px;
 }
@@ -110,6 +106,10 @@
 	border: none;
 	margin-top: -1.1em;
 	width: auto !important;
+}
+
+.navbar.navbar-default .navbar-left {
+	clear:both;
 }
 
 .navbar-default .navbar-brand {
