Chore: better alignments for table checkbox

--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -116,8 +116,9 @@ td.sonata-ba-list-field.sonata-ba-list-field-integer {
 
 .sonata-ba-list-field-header-batch, .sonata-ba-list-field-batch {
     padding: 1.35em 0.5em !important;
+    text-align: center;
     + .sonata-ba-list-field-header-text, + .sonata-ba-list-field-text {
-        padding: 1.35em 0.3rem !important;
+        padding: 1.35em 0;
     }
 }
 
