Refactor: Change root namespace

--- a/Resources/views/Pager/results.html.twig
+++ b/Resources/views/Pager/results.html.twig
@@ -9,4 +9,4 @@ file that was distributed with this source code.
 
 #}
 
-{% extends 'JustSonataThemeBundle:Pager:base_results.html.twig' %}
+{% extends 'WearejustSonataThemeBundle:Pager:base_results.html.twig' %}
