Chore: removes the 50px margin from the navbar stuck element

--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -143,3 +143,6 @@ body.fixed .content-header>.sticky-wrapper {
         margin-right: auto;
     }
 }
+body.fixed .content-header .navbar.stuck {
+    top: 0 !important;
+}
