Feature: Add table layout fixed

--- a/Resources/assets/scss/_table.scss
+++ b/Resources/assets/scss/_table.scss
@@ -1,7 +1,7 @@
-.table-bordered {
+table.sonata-ba-list {
+    table-layout: fixed;
     border: 0;
 }
-
 
 table.sonata-ba-list th {
     background-image: none;
