Revert "Feature: Add table layout fixed"
This reverts commit e26b338452a1aa84eaa74f68e937240f99e848fd.

--- a/Resources/assets/scss/_table.scss
+++ b/Resources/assets/scss/_table.scss
@@ -1,7 +1,7 @@
-table.sonata-ba-list {
-    table-layout: fixed;
+.table-bordered {
     border: 0;
 }
+
 
 table.sonata-ba-list th {
     background-image: none;
