Bugfix: table row link checkbox fix

--- a/Resources/assets/scss/_forms.scss
+++ b/Resources/assets/scss/_forms.scss
@@ -438,7 +438,7 @@ span.x-editable.editable.editable-click, .sonata-ba-list-field-boolean .label-da
 	.sonata-ba-form .sonata-ba-form-actions.well {
 		left: 230px;
 	}
-	.form-inline.is-visible {
+	.form-inline {
 		background-color: $gray;
 		position: fixed;
 		bottom: 0;
@@ -479,7 +479,7 @@ span.x-editable.editable.editable-click, .sonata-ba-list-field-boolean .label-da
 	.sonata-ba-form .sonata-ba-form-actions.well {
 		left: 20%;
 	}
-	.form-inline.is-visible {
+	.form-inline {
 		left: 20%;
 	}
 }
