--- a/Resources/assets/scss/_navbar.scss
+++ b/Resources/assets/scss/_navbar.scss
@@ -106,12 +106,31 @@
 	border: none;
 	margin-top: -1.1em;
 	width: auto !important;
+	.navbar-nav {
+		margin: 0 0.7em;
+	}
 }
-
+.navbar-default .navbar-nav > li > a {
+	font-size: 1.25em;
+    padding: 1em 1.5em;
+	color: $primary-color;
+	font-weight: bold;
+}
+.navbar-default .navbar-nav > li > .sonata-ba-action {
+	font-size: 1em;
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+	background-color: #f2f2f2;
+}
+.navbar-default .navbar-collapse {
+	margin-left: -15px !important;
+	margin-right: -15px !important;
+    border-bottom: 30px solid #f2f2f2;
+    padding: 0;
+}
 .navbar.navbar-default .navbar-left {
-	clear:both;
+	clear: both;
 }
-
 .navbar-default .navbar-brand {
 	color: #000000;
 	display: inline-block;
@@ -191,11 +210,6 @@
 	margin: 1.5em;
 	margin-right: 0;
 }
-.navbar-default .navbar-nav>li>a {
-	color: $primary-color;
-	font-size: 14px;
-	font-weight: bold;
-}
 
 .navbar-nav>.user-menu>.dropdown-menu>li.user-header>img {
 	border-color: #fff;
@@ -219,7 +233,9 @@
 .navbar-nav>.user-menu>.dropdown-menu>.user-footer {
     background-color: #fff;
 }
-
+.content-header .navbar-nav.navbar-right {
+	float: none !important;
+}
 @media screen and (min-width: 48em) {
 	.sidebar-toggle {
 		display: none;
@@ -227,6 +243,9 @@
 	.content-header .navbar-nav.navbar-right {
 		margin-top: 0.75em; margin-bottom: 0.75em;
 		margin-right: -0.5625em;
+	    position: absolute;
+	    right: 3em;
+	    top: 3em;
 		.dropdown-toggle  {
 			margin-top: -0.25em;
 		}
@@ -235,13 +254,15 @@
 
 @media screen and (min-width: 50em) {
 	.content-header .navbar-nav.navbar-right{
-		margin-top: 3.75em;
-		margin-bottom: 3.75em;
+		// margin-top: 3.75em;
+		// margin-bottom: 3.75em;
+		// why?
 	}
 	.navbar-default .navbar-brand {
 		font-size: 3.5em;
 	}
 	.navbar-header {
+		float: none;
 		padding: 3.1428571429em 2.4em;
 		word-break: normal;
 	}
